--- a/src/componentcss/Consultations.css
+++ b/src/componentcss/Consultations.css
@@ -49,3 +49,15 @@
 .consultations {
     background-color: #79706A;
 } */
+/* Mobile header adjustments */
+@media screen and (max-width: 768px) {
+    .consultations-body {
+        padding-top: 70px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .consultations-body {
+        padding-top: 65px;
+    }
+}
